--- a/Celbridge/Workspace/Celbridge.Inspector/Views/ComponentListView.xaml
+++ b/Celbridge/Workspace/Celbridge.Inspector/Views/ComponentListView.xaml
@@ -117,7 +117,7 @@
                           Foreground="{ThemeResource WarningTextColor}"
                           Visibility="{x:Bind ShowWarningIcon, Mode=OneWay}"/>
 
-                <TextBlock Text="{x:Bind SummaryText, Mode=OneWay}" />
+                <TextBlock Text="{x:Bind Description, Mode=OneWay}" />
 
               </StackPanel>
             </Grid>
