--- a/Celbridge/Workspace/Celbridge.Inspector/Views/ComponentListView.xaml
+++ b/Celbridge/Workspace/Celbridge.Inspector/Views/ComponentListView.xaml
@@ -64,12 +64,13 @@
                 ContextFlyout="{StaticResource ComponentContextMenu}">
 
             <Grid.ColumnDefinitions>
+              <ColumnDefinition Width="{x:Bind IndentWidth, Mode=OneWay}"/>
               <ColumnDefinition Width="Auto"/>
               <ColumnDefinition Width="*"/>
               <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
 
-            <Grid Grid.Column="0"
+            <Grid Grid.Column="1"
                   Margin="0 0 8 0">
 
               <!-- TextBlock is displayed when component name does not have focus -->
@@ -93,7 +94,7 @@
             </Grid>
 
             <!-- A grid with the background color set is needed for tooltip to work -->
-            <Grid Grid.Column="1"
+            <Grid Grid.Column="2"
                   Margin="8 0 0 0"
                   Background="Transparent" 
                   ToolTipService.ToolTip="{x:Bind Tooltip, Mode=OneWay}">
@@ -125,7 +126,7 @@
             </Grid>
 
             <!-- Component menu button -->
-            <Button Grid.Column="2"
+            <Button Grid.Column="3"
                     Margin="8 0 0 0"
                     Width="24"
                     Height="24"
