Console matches system light mode/dark mode settings.

--- a/Celbridge/Workspace/Celbridge.Console/Views/ConsolePanel.xaml
+++ b/Celbridge/Workspace/Celbridge.Console/Views/ConsolePanel.xaml
@@ -9,6 +9,7 @@
   <Grid>
     <WebView2 x:Name="TerminalWebView"
               HorizontalAlignment="Stretch"
-              VerticalAlignment="Stretch" />
+              VerticalAlignment="Stretch"
+              DefaultBackgroundColor="Transparent"/>
   </Grid>
 </UserControl>
